objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>Status on the account</description>
        <formula>TEXT(Account.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status on the account</inlineHelpText>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_for_Salesforce_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Salesforce Integration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientEmployee__c</fullName>
        <externalId>true</externalId>
        <label>ClientEmployeeId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_1_Phone__c</fullName>
        <label>Contact 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts_Birthdate__c</fullName>
        <description>Contact's Birthdate</description>
        <label>Contact's Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_to_Reach_Opportunity__c</fullName>
        <label>Days to Reach Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <description>Contact is a decision maker for the company</description>
        <inlineHelpText>Contact is a decision maker for the company</inlineHelpText>
        <label>Decision Maker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Phone__c</fullName>
        <description>Direct Phone</description>
        <inlineHelpText>Direct Phone</inlineHelpText>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EE_Status_Desc__c</fullName>
        <description>Employee Status Description</description>
        <label>EE Status Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Status_Date__c</fullName>
        <label>Employee Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Id__c</fullName>
        <label>Employer Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Info__c</fullName>
        <label>Event Info</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Golf Event</fullName>
                </value>
                <value>
                    <fullName>Client Holiday Party</fullName>
                </value>
                <value>
                    <fullName>Client Holiday Gift</fullName>
                </value>
                <value>
                    <fullName>Business Forum</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Charity Gala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_touch_converting_campaign__c</fullName>
        <description>The campaign responsible for the first touch creation of this contact. From HubSpot.</description>
        <label>First touch converting campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Golf_Handicap__c</fullName>
        <label>Golf Handicap</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_marketing_email_name__c</fullName>
        <description>The name of the last marketing email sent to the current email address. This is automatically set by HubSpot.</description>
        <label>Last marketing email name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_marketing_email_send_date__c</fullName>
        <description>The date of the most recent delivery for any marketing email to the current email address. This is automatically set by HubSpot.</description>
        <label>Last marketing email send date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Conversion_Date__c</fullName>
        <description>The date this contact last submitted a form. From HubSpot (Read only).</description>
        <label>Recent Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Spouse_Guest_Name__c</fullName>
        <label>Spouse/Guest Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <inlineHelpText>Team in which the account belongs too</inlineHelpText>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kokua</fullName>
                </value>
                <value>
                    <fullName>Lokahi</fullName>
                </value>
                <value>
                    <fullName>Pono</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tee_Shirt_Size__c</fullName>
        <label>Tee Shirt Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XXOpp_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>XXOpp External ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Status__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Client_ID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Decision_Maker__c</columns>
        <columns>CONTACT.EMAIL_OPT_OUT</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>Last_marketing_email_send_date__c</columns>
        <columns>NPS_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_ID__c</field>
            <operation>equals</operation>
            <value>1166</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Kokua_Team</fullName>
        <columns>Contact_Type__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Kokua Team</value>
        </filters>
        <label>Kokua Team</label>
    </listViews>
    <listViews>
        <fullName>Lokahi_Team</fullName>
        <columns>Contact_Type__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Lokahi Team</value>
        </filters>
        <label>Lokahi Team</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Pono_Team</fullName>
        <columns>Contact_Type__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Client_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Pono Team</value>
        </filters>
        <label>Pono Team</label>
    </listViews>
    <recordTypes>
        <fullName>Payroll</fullName>
        <active>true</active>
        <description>Employee contact imported from a payroll system</description>
        <label>Payroll</label>
    </recordTypes>
</CustomObject>